fixed avatar uploader

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @flats.each do |flat| %>
       <tr>
-        <td><%= flat.price %></td>
+        <td><%= flat.price %> <span>рублей</span></td>
         <td><%= flat.district %></td>
         <td><%= flat.subway %></td>
         <td><%= flat.status %></td>
