--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -88,7 +88,7 @@
 
   <div class="field">
     <%= form.label :avatar %>
-    <%= form.text_field :avatar %>
+    <%= form.file_field :avatar %>
   </div>
 
   <div class="actions">
