--- a/app/views/layouts/home_layout.html.slim
+++ b/app/views/layouts/home_layout.html.slim
@@ -7,10 +7,9 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    - #= javascript_pack_tag 'hello_react'
+    - javascript_pack_tag 'hello_react'
 
   body
-    
 
     .container
       = yield
