--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -5,11 +5,10 @@ textarea, select, input, button { outline: none; }
 .field {
   display: flex;
   flex-direction: column;
+  margin-top: 0;
 }
 
-
 input, select {
-  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   border: 2px solid #ADB2BA;
   box-sizing: border-box;
@@ -18,7 +17,6 @@ input, select {
   width: 302px;
   background: white;
   padding: 8px;
-  margin-top: 20px;
 
   &[type=text] {
     font-size: 18px;
@@ -32,36 +30,13 @@ input, select {
   }
 }
 
-// button {
-  .primary, .secondary {
-    cursor: pointer;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
-    line-height: 22px;
-    background: #F36D03;
-    border-radius: 8px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    margin-top: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+label {
+  color: red;
+  //opacity: 0;
+}
 
-  .primary:hover{
-    background: #F05600;
-  }
-
-  .secondary:hover{
-    background: lightgray;
-  }
-
-  .secondary {
-    background: white;
-    border: 2px solid #ADB2BA;
-    color: black;
-    margin-left: 20px;
-  }
-// }
+.remember_me {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
