--- a/app/assets/stylesheets/userForm.scss
+++ b/app/assets/stylesheets/userForm.scss
@@ -4,8 +4,9 @@ section .UserForm {
   padding: 80px 184px;
   // box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
   background-color: white;
+
   p {
     margin-top: auto;
-    margin-top: 20px;
+      // margin-top: 20px;
   }
 }
