--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,19 +1,25 @@
-h1
-  | Снимай жильё, заводи друзей
+.wrapper
+  .picture
 
-p
-  | S!Mate — приложение для коллективного съёма жилья. Регистрируйся, заполняй анкету и смотри только подходящие тебе предложения и квартиры.
+  h1
+    | Снимай жильё, заводи друзей
 
-h2
-   = link_to 'All flats', flats_path
+  p
+    | S!Mate – приложение для коллективного съёма жилья. Регистрируйся, заполняй анкету и смотри только подходящие тебе предложения и квартиры.
 
-h2
+  //h2
+     //= link_to 'All flats', flats_path
+
   - if user_signed_in?
     div.username
       = link_to current_user.name, current_user
       = link_to 'Выйти', destroy_user_session_path, method: :delete
 
   - else
-    div.log_in
-      = link_to 'Зарегистрироваться', new_user_registration_path
-      = link_to 'Войти', new_user_session_path
+
+  div.log_in
+    .secondary
+      | Подробнее
+      //= link_to 'Подробнее', new_user_registration_path
+    .primary
+      = link_to 'Начать', new_user_session_path
