added more seed photos to db and fixed some css input bugs

--- a/app/assets/stylesheets/flatCard.scss
+++ b/app/assets/stylesheets/flatCard.scss
@@ -57,4 +57,15 @@
       justify-content: space-between;
     }
   }
+
+  p, h1, h2, h3, a {
+    &:hover {
+      text-decoration: none;
+    }
+
+    a {
+      margin: 0;
+      padding: 0;
+    }
+  }
 }
