--- a/app/views/flats/index.html.slim
+++ b/app/views/flats/index.html.slim
@@ -6,5 +6,5 @@ h1
 .flat_container
   = render partial: 'flat_card', collection: @flats, as: :flat
 
-br
-= link_to 'New Flat', new_flat_path
+.tertiary
+  = link_to 'New Flat', new_flat_path
