--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -20,6 +20,6 @@
   div.log_in
     .secondary
       | Подробнее
-      //= link_to 'Подробнее', new_user_registration_path
+      //= link_to 'Подробнее',  new_user_session_path
     .primary
-      = link_to 'Начать', new_user_session_path
+      = link_to 'Начать', new_user_registration_path
