--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -4,7 +4,7 @@
   font-size: 18px;
   line-height: 22px;
   border-radius: 8px;
-  padding: 15px 32px;
+  padding: 15px 29px;
   text-align: center;
   display: inline-block;
 
@@ -18,6 +18,7 @@
 
 .primary {
   background: #F36D03;
+  color: white;
 
   a {
     color: white;
@@ -66,4 +67,18 @@ button.apply {
   line-height: 22px;
   text-align: center;
   letter-spacing: -0.4px;
+}
+
+.tertiary a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: -0.3px;
+  color: #ADB2BA;
+
+  &:hover {
+    text-decoration: none;
+    color: #3E4462;
+  }
 }
