--- a/app/views/flats/_flat_card.html.slim
+++ b/app/views/flats/_flat_card.html.slim
@@ -1,17 +1,18 @@
 .flatCard
-  .flat_image
-    = image_tag(flat.flat_attachments.first.image.to_s)
-  .flat_info
-    .flat_description
-      h3 = flat.name
-      p.card = flat.description
-      //p = flat.district
-      p = flat.subway
-    .flat_action
-      p.price
-        = flat.price
-        |   руб
-      = link_to '', flat_path(flat), class: 'flat_arrow_icon'
+  = link_to flat_path(flat) do
+    .flat_image
+      = image_tag(flat.flat_attachments.first.image.to_s)
+    .flat_info
+      .flat_description
+        h3 = flat.name
+        p.card = flat.description
+        //p = flat.district
+        p = flat.subway
+      .flat_action
+        p.price
+          = flat.price
+          |   руб
+        = link_to '', flat_path(flat), class: 'flat_arrow_icon'
 
           // Тут первая? фотка квартиры
           // - flat.flat_attachments.each do |flat_attachment|
