--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap');
 
-textarea, select, input, button { outline: none; }
+button,
+input,
+select,
+textarea {
+  outline: none;
+}
 
 .form {
   h1 {
@@ -18,13 +23,14 @@ textarea, select, input, button { outline: none; }
   justify-content: space-between;
   margin-top: 0;
   // background: white;
-
-  input, select {
+  input,
+  select {
     margin-bottom: 16px;
   }
 }
 
-input, select {
+input,
+select {
   font-size: 16px;
   border: 2px solid #ADB2BA;
   box-sizing: border-box;
@@ -60,5 +66,6 @@ label {
 .field label {
   font-family: 'Open Sans', sans-serif;
   color: #ADB2BA;
-  margin-bottom: 4px;/*or whatever you want to change*/
+  margin-bottom: 4px;
+  /*or whatever you want to change*/
 }
