--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -13,7 +13,7 @@ h4,
 h5,
 h6,
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 h1 {
@@ -21,7 +21,7 @@ h1 {
   font-size: 36px;
   line-height: 44px;
   letter-spacing: -1.5px;
-  color: #18214D;
+  color: #18214d;
   margin-top: 20px;
   margin-bottom: 12px;
 }
@@ -38,7 +38,7 @@ h3 {
   font-size: 20px;
   line-height: 28px;
   letter-spacing: -0.4px;
-  color: #18214D;
+  color: #18214d;
 }
 
 p {
@@ -46,7 +46,7 @@ p {
   font-size: 18px;
   line-height: 26px;
   letter-spacing: -0.3px;
-  color: #3E4462;
+  color: #3e4462;
   padding-top: 20px;
   max-width: 648px;
 }
@@ -56,7 +56,7 @@ p.card {
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  color: #3E4462;
+  color: #3e4462;
 }
 
 p.price {
@@ -64,7 +64,7 @@ p.price {
   font-size: 16px;
   line-height: 22px;
   letter-spacing: -0.4px;
-  color: #F36D03;
+  color: #f36d03;
 }
 
 a {
@@ -73,7 +73,7 @@ a {
   font-size: 16px;
   line-height: 18px;
   letter-spacing: -0.4px;
-  color: #18214D;
+  color: #18214d;
 
   &:hover {
     text-decoration: underline;
