--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,7 +24,7 @@
     line-height: 52px;
     text-align: center;
     letter-spacing: -2.4px;
-    color: #18214D;
+    color: #18214d;
   }
 
   p {
@@ -37,7 +37,7 @@
     line-height: 26px;
     text-align: center;
     letter-spacing: -0.4px;
-    color: #3E4462;
+    color: #3e4462;
   }
 
   .log_in {
