--- a/app/assets/stylesheets/menubar.scss
+++ b/app/assets/stylesheets/menubar.scss
@@ -1,13 +1,14 @@
 .menubar {
   width: 100%;
   height: 64px;
-  color: #FFF;
+  color: #fff;
   background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding-top: 12px;
+
   // position: sticky;
   // top:0;
   .logo {
