--- a/app/views/flats/show.html.slim
+++ b/app/views/flats/show.html.slim
@@ -3,7 +3,7 @@ p#notice
 
 .info
   - if @flat.conversations.any? { |conversation| conversation.user_id == current_user.id}
-    = link_to 'Перейти в чат', flat_conversations_path(@flat), :method => :post, class: 'apply'
+    = link_to 'Перейти в чат', flat_conversations_path(@flat)
   - else
     = link_to 'Подать заявку', flat_conversations_path(@flat), :method => :post, class: 'apply'
 
