--- a/app/assets/stylesheets/menubar.scss
+++ b/app/assets/stylesheets/menubar.scss
@@ -12,6 +12,7 @@
   // position: sticky;
   // top:0;
   .logo {
+    display: block;
     background-image: url("logo.svg");
     margin-left: 60px;
     background-size: contain;
