--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
 
         a.menu_item Уведомления
 
-        - if current_user.flats.present?
+        - if current_user&.flats.present?
           = link_to 'Чаты', flat_conversations_path(current_user.flats.first), class: 'menu_item'
         - else
           = link_to 'Чаты', pages_join_conversations_path, class: 'menu_item'
