--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "components";
+
+// Show Users
+
+.ava_name {
+  @include ava_name;
+}
+
+.nav_tab {
+  margin-top: 56px;
+  @include nav_tab;
+}
