--- a/app/views/users/profile.html.slim
+++ b/app/views/users/profile.html.slim
@@ -1,4 +1,8 @@
+= javascript_pack_tag 'profile_pack'
+
 .ava_name
   = image_tag(@user.avatar)
   .user_info
     h3 Мария Кондратенко
+
+.profile_pack data-props=@user_json
